src/types/tests/snapshots/tgbot__types__tests__update__get_updates-2.snap
---
source: src/types/tests/update.rs
expression: actual_data
---
{
  "allowed_updates": [
    "message"
  ],
  "limit": 10,
  "offset": 0,
  "timeout": 10
}
