src/types/tests/snapshots/tgbot__types__tests__update__inline_query.snap
---
source: src/types/tests/update.rs
expression: expected_struct
---
{
  "update_id": 1,
  "inline_query": {
    "from": {
      "first_name": "John",
      "id": 1,
      "is_bot": false
    },
    "id": "query-id",
    "offset": "query offset",
    "query": "query query"
  }
}
