src/types/tests/snapshots/tgbot__types__tests__update__poll.snap
---
source: src/types/tests/update.rs
expression: expected_struct
---
{
  "update_id": 1,
  "poll": {
    "type": "regular",
    "allows_multiple_answers": false,
    "allows_revoting": false,
    "id": "poll-id",
    "is_anonymous": true,
    "is_closed": true,
    "members_only": false,
    "options": [
      {
        "persistent_id": "1",
        "text": "Yes",
        "voter_count": 1000
      },
      {
        "persistent_id": "2",
        "text": "No",
        "voter_count": 0
      }
    ],
    "question": "Rust?",
    "total_voter_count": 1000
  }
}
