src/types/tests/snapshots/tgbot__types__tests__update__poll_answer.snap
---
source: src/types/tests/update.rs
expression: expected_struct
---
{
  "update_id": 1,
  "poll_answer": {
    "option_ids": [
      0
    ],
    "option_persistent_ids": [],
    "poll_id": "poll-id",
    "user": {
      "first_name": "John",
      "id": 1,
      "is_bot": false
    }
  }
}
